--- a/translations/kangyur/translations/090-035_toh591-the_supreme_accomplishment_of_invincible_averting_sitatapatra_born_from_the_usnisa_of_the_tathagata.xml
+++ b/translations/kangyur/translations/090-035_toh591-the_supreme_accomplishment_of_invincible_averting_sitatapatra_born_from_the_usnisa_of_the_tathagata.xml
@@ -39,7 +39,7 @@
         <author role="translatorEng" xml:id="UT22084-090-035-377">Roger Espel Llima</author>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.6 <date>2023</date>
+                <edition>v 1.0.8 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -194,6 +194,12 @@
                 </change>
                 <change who="#john" when="2023-08-11T08:07:38.304Z" type="text-version" status="1.0.6" xml:id="UT22084-090-035-416">
                     <desc>Typo corrected</desc>
+                </change>
+                <change who="#celso" when="2023-10-13T11:48:10.305Z" type="text-version" status="1.0.7" xml:id="UT22084-090-035-417">
+                    <desc>reapplied capital letters in Wylie and covert to TibUni-glossary</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-10-23T21:24:33.378Z" type="text-version" status="1.0.8" xml:id="UT22084-090-035-418">
+                    <desc>updated ellipsis.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -2537,8 +2543,8 @@
                         <gloss type="person" xml:id="UT22084-090-035-291">
                             <term type="translationMain">Bhaiṣajyaguruvaiḍūryaprabharāja</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">bhaiṣajya­guruvaiḍūrya­prabharāja</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">sman gyi bla bai dur+ya’i ’od kyi rgyal po</term>
-                            <term xml:lang="bo" type="attestedSource" n="1">སྨན་གྱི་བླ་བཻ་དུརྱའི་འོད་ཀྱི་རྒྱལ་པོ།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">sman gyi bla bai DUr+ya’i ’od kyi rgyal po</term>
+                            <term xml:lang="bo" type="attestedSource" n="1">སྨན་གྱི་བླ་བཻ་ཌཱུརྱའི་འོད་ཀྱི་རྒྱལ་པོ།</term>
                             <note type="definition">
                                 <p>The full name of the buddha popularly known as the Medicine
                 Buddha. </p>
@@ -2549,8 +2555,8 @@
                         <gloss type="person" xml:id="UT22084-090-035-292">
                             <term type="translationMain">Supuṣpitaśālendrārāja</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">supuṣpita­śālendrā­rāja</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">sa la’i dbang po’i rgyal po me tog kun tu rgyas pa</term>
-                            <term xml:lang="bo" type="attestedSource" n="1">ས་ལའི་དབང་པོའི་རྒྱལ་པོ་མེ་ཏོག་ཀུན་ཏུ་རྒྱས་པ།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">sA la’i dbang po’i rgyal po me tog kun tu rgyas pa</term>
+                            <term xml:lang="bo" type="attestedSource" n="1">སཱ་ལའི་དབང་པོའི་རྒྱལ་པོ་མེ་ཏོག་ཀུན་ཏུ་རྒྱས་པ།</term>
                             <note type="definition">
                                 <p>The name of a buddha.</p>
                             </note>
@@ -2560,8 +2566,8 @@
             <gloss xml:id="UT22084-090-035-293" type="person" mode="match">
                             <term type="translationMain">Śākyamuni</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">śākyamuni</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">shakya thub pa</term>
-                            <term xml:lang="bo" type="attestedSource" n="1">ཤཀྱ་ཐུབ་པ།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">shAkya thub pa</term>
+                            <term xml:lang="bo" type="attestedSource" n="1">ཤཱཀྱ་ཐུབ་པ།</term>
                             <note type="definition" rend="override">
                                 <p>The “Sage of the Śākyas,” the name of the Buddha of our era,
                 who lived ca. 563–483 <hi rend="small-caps">bce</hi>.</p>
@@ -3059,8 +3065,8 @@
                         <gloss type="person" xml:id="UT22084-090-035-334">
                             <term type="translationMain">Mahājana</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">mahājana</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">ma ha dza na</term>
-                            <term xml:lang="bo" type="attestedSource" n="1">མ་ཧ་ཛ་ན།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">ma hA dza na</term>
+                            <term xml:lang="bo" type="attestedSource" n="1">མ་ཧཱ་ཛ་ན།</term>
                             <note type="definition">
                                 <p>A Kashmiri paṇḍita active in Tibet in the eleventh century.
               </p>
@@ -3165,8 +3171,8 @@
             <gloss xml:id="UT22084-090-035-345" type="place" mode="match">
                             <term type="translationMain">Ganges</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">gaṅgā</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">gang ga</term>
-                            <term xml:lang="bo" type="attestedSource" n="1">གང་ག</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">gang gA</term>
+                            <term xml:lang="bo" type="attestedSource" n="1">གང་གཱ།</term>
                             <note type="definition" rend="override">
                                 <p>The sacred river of North India.</p>
                             </note>
