--- a/translations/kangyur/translations/095-002_toh747-the_tantra_of_vajrapani_bhutadamara.xml
+++ b/translations/kangyur/translations/095-002_toh747-the_tantra_of_vajrapani_bhutadamara.xml
@@ -37,7 +37,7 @@
                     Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.11 <date>2023</date>
+                <edition>v 1.0.13 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -158,6 +158,12 @@
                 </change>
                 <change who="#celso" when="2023-09-29T13:49:16.903Z" type="text-version" status="1.0.11" xml:id="UT22084-095-002-2146">
                     <desc>added missing milestone app.1</desc>
+                </change>
+                <change who="#celso" when="2023-10-13T11:48:10.305Z" type="text-version" status="1.0.12" xml:id="UT22084-095-002-2147">
+                    <desc>reapplied capital letters in Wylie and covert to TibUni-glossary</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-10-23T23:12:56.562Z" type="text-version" status="1.0.13" xml:id="UT22084-095-002-2148">
+                    <desc>updated ellipsis.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -319,7 +325,7 @@
                         general incongruities in the content of the tantra. </p>
                     <milestone unit="chunk" xml:id="UT22084-095-002-12"/>
                     <p tid="18">The first irregularity comes at the very beginning of the text. The
-                        tantra begins not with the expected “Thus have I heard . . .” but with
+                        tantra begins not with the expected “Thus have I heard…” but with
                         advice given by Vajrapāṇi, who begins with the standard Sanskrit phrase for
                         introducing a new topic, <foreign xml:lang="Sa-Ltn" type="term">athātas</foreign>. What follows is not the usual scriptural formulation
                         that introduces the context for the teaching, but rather a seemingly
@@ -1955,7 +1961,7 @@
                     <lg tid="236">
                         <l>“She holds a flask of perfume,</l>
                         <l>And is adorned with jewel ornaments.<note place="end" xml:id="UT22084-095-002-258"> The translation of the
-                                lines “In the southeast . . . jewel ornaments” is based on the
+                                lines “In the southeast … jewel ornaments” is based on the
                                 Tib.</note>
                         </l>
                         <l>In the southwest, one should draw</l>
@@ -5760,7 +5766,7 @@
                         standardization was applied, with a number of features left intact. Thus,
                         following the convention of the manuscripts, the vowel <foreign xml:lang="Sa-Ltn" type="term">sandhi</foreign>, much of the time, has
                         not been applied; e.g., the Sanskrit absolutive is always written as
-                        separate from the word that follows ( . . . <foreign xml:lang="Sa-Ltn" type="term">gatvā aṣṭa­śataṃ japet</foreign>, and not . . . <foreign xml:lang="Sa-Ltn" type="term">gatvāṣṭa­śataṃ japet</foreign>). </p>
+                        separate from the word that follows (…<foreign xml:lang="Sa-Ltn" type="term">gatvā aṣṭa­śataṃ japet</foreign>, and not … <foreign xml:lang="Sa-Ltn" type="term">gatvāṣṭa­śataṃ japet</foreign>). </p>
                     <milestone unit="chunk" xml:id="UT22084-095-002-1135"/>
                     <p tid="821"> Spelling has been standardized throughout the text, but
                         applications of <foreign xml:lang="Sa-Ltn" type="term">sandhi</foreign>
@@ -6463,8 +6469,7 @@
                         pratipālayati dharati | rājyaṃ dadāti | sarvāśāṃ paripūrayati |
                         mahādhanapatir bhavati | pañcavarṣaśatāni jīvayati<note place="end" xml:id="UT22084-095-002-1331"> sādhakena vaktavyam | mātā
                             bhavasveti | mātāvat pratipālayati dharati | rājyaṃ dadāti | sarvāśāṃ
-                            paripūrayati | mahādhanapatir bhavati | pañcavarṣaśatāni jīvayati] A;
-                             . . . ? G </note> | yadā mriyate rājakule jāyate ||<!-- 5.2 || -->
+                            paripūrayati | mahādhanapatir bhavati | pañcavarṣaśatāni jīvayati] A;…? G </note> | yadā mriyate rājakule jāyate ||<!-- 5.2 || -->
                     </p>
                     <milestone unit="chunk" xml:id="UT22084-095-002-1332"/>
                     <p tid="969"> atha śrīvajradharagṛhe<note place="end" xml:id="UT22084-095-002-1333"> śrīvajradharagṛhe] A;
@@ -6477,7 +6482,7 @@
                     <p tid="970"> rātrau ekaliṅge gatvā sahasraṃ japet | ekadivasena nūpuraśabdaḥ
                         śrūyate | dvitīyadivasena divyastrī puratas tiṣṭhati | na dūṣayati na ca
                             bhāṣate<note place="end" xml:id="UT22084-095-002-1336">
-                            bhāṣate] B; tūṣayate | na ca bhāṣayate G;  . . . (illegible) A </note> |
+                            bhāṣate] B; tūṣayate | na ca bhāṣayate G;  … (illegible) A </note> |
                         {A14v} tṛtīyadivase vācaṃ bhāṣate | bho sādhaka kim ājñāpayasi | sādhakena
                         vaktavyam | bho devate<note place="end" xml:id="UT22084-095-002-1337"> bho devate] A; <distinct>om.</distinct> G </note> |
                         upasthāyikā bhavasveti | yāvaj jīvati tāvad upasthāyikā bhavati | pṛṣṭham
@@ -6497,7 +6502,7 @@
                     <p tid="972"> rātrau udyānaṃ gatvā aṣṭasahasraṃ japed divasāni trīṇi | {A15r}
                         tṛtīye divase nūpuraśabdaḥ śrūyate | caturthe divase bhūtinīṃ paśyati |
                         pañcame divase puratas tiṣṭhati | ṣaṣṭhe divase pañca dīnāraṃ dadāti |
-                        saptame divase svagṛhe āgacchati<note place="end" xml:id="UT22084-095-002-1341"> . . . svagṛhe āgacchati] A;
+                        saptame divase svagṛhe āgacchati<note place="end" xml:id="UT22084-095-002-1341"> … svagṛhe āgacchati] A;
                             niyatam āgacchati G </note> | aṣṭame divase śiraḥsthānena maṇḍalakaṃ
                         kṛtvā gugguludhūpaṃ dattvā aṣṭasahasraṃ japet | divyabhūtinīkanyā svagṛhe
                         āgacchati | āgatāyāḥ kāmayitavyā bhāryā {G7r} bhavati | divyamuktāhāraṃ
@@ -7492,7 +7497,7 @@
                     <p tid="1226"> vihāradvāre gatvā aṣṭasahasraṃ japet | asya kuñjaramati nāma
                         bhūtinī āgacchati | āgatāyā baliṃ dāpayet | vatsa kiṃ mayā kartavyam |
                         sādha[kena vaktavyam |] {A30r} mātā me bhavasveti | mātṛvat paripālayati |
-                        ātmanā pañcamasya vastrālaṃkārabhojanāni prayacchati<note place="end" xml:id="UT22084-095-002-1592"> The part “āgatāyā baliṃ . . .
+                        ātmanā pañcamasya vastrālaṃkārabhojanāni prayacchati<note place="end" xml:id="UT22084-095-002-1592"> The part “āgatāyā baliṃ …
                             prayacchati” is missing in G. </note> ||<!-- 13.13 || -->
                     </p>
                     <milestone unit="chunk" xml:id="UT22084-095-002-1593"/>
@@ -8939,7 +8944,7 @@
                     <p tid="1555"> bhūtaḍāmaramahātantrarājaḥ<note place="end" xml:id="UT22084-095-002-2016"> °mahātantrarājaḥ] A; °tantraḥ
                             G </note> samāptaḥ || </p>
                     <p tid="1556"> ye dharmā hetuprabhavā hetuṃ teṣāṃ tathāgato hy avadat | teṣāṃ ca
-                        yo nirodha evaṃvādī mahāśravaṇaḥ<note place="end" xml:id="UT22084-095-002-2017"> ye dharmā . . . mahāśravaṇaḥ]
+                        yo nirodha evaṃvādī mahāśravaṇaḥ<note place="end" xml:id="UT22084-095-002-2017"> ye dharmā … mahāśravaṇaḥ]
                             A; <distinct>om.</distinct> G </note> || </p>
                 </div>
             </div>
@@ -10079,8 +10084,8 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">padminī</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">pad+ma ma</term>
                             <term xml:lang="bo" type="attestedSource" n="1">པདྨ་མ།</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="2">pad+ma ma ni</term>
-                            <term xml:lang="bo" type="attestedSource" n="2">པདྨ་མ་ནི།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="2">pad+ma ma Ni</term>
+                            <term xml:lang="bo" type="attestedSource" n="2">པདྨ་མ་ཎི།</term>
                             <note type="definition">
                                 <p>One of the eight great yakṣiṇīs and one of the
                                 eight nāga queens.</p>
@@ -10189,7 +10194,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">śakra</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">brgya byin</term>
                             <term xml:lang="bo" type="attestedSource" n="1">བརྒྱ་བྱིན།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>Another name for Indra, the chief god in the
                                 realm of the thirty-three gods.</p>
                             </note>
@@ -10742,7 +10747,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">indra</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">brgya byin</term>
                             <term xml:lang="bo" type="attestedSource" n="1">བརྒྱ་བྱིན།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The chief god in the realm of the thirty-three
                                 gods, also known as Śakra.</p>
                             </note>
@@ -10777,8 +10782,8 @@
                         <gloss type="person" xml:id="UT22084-095-002-2024">
                             <term type="translationMain">Cāmuṇḍā</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">cāmuṇḍā</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">tsa mun+di</term>
-                            <term xml:lang="bo" type="attestedSource" n="1">ཙ་མུནྡི།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">tsa muN+Di</term>
+                            <term xml:lang="bo" type="attestedSource" n="1">ཙ་མུཎྜི།</term>
                         </gloss>
                     </item>
                     <item>
@@ -10964,8 +10969,8 @@
                         <gloss type="person" xml:id="UT22084-095-002-2042">
                             <term type="translationMain">Mahāpadminī</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">mahāpadminī</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">ma ha pad+ma ma ni</term>
-                            <term xml:lang="bo" type="attestedSource" n="1">མ་ཧ་པདྨ་མ་ནི།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">ma hA pad+ma ma Ni</term>
+                            <term xml:lang="bo" type="attestedSource" n="1">མ་ཧཱ་པདྨ་མ་ཎི།</term>
                             <note type="definition">
                                 <p>One of the eight nāga queens.</p>
                             </note>
@@ -10975,8 +10980,8 @@
                         <gloss type="person" xml:id="UT22084-095-002-2043">
                             <term type="translationMain">Vāsukimukhī</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">vāsukimukhī</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">ba su kha mu khi</term>
-                            <term xml:lang="bo" type="attestedSource" n="1">བ་སུ་ཁ་མུ་ཁི།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">bA su kha mu khi</term>
+                            <term xml:lang="bo" type="attestedSource" n="1">བཱ་སུ་ཁ་མུ་ཁི།</term>
                             <note type="definition">
                                 <p>“One with the Face of Vāsuki.” One of the eight
                                 nāga queens.</p>
