--- a/translations/kangyur/translations/096-054_toh805-the_tantra_the_questions_of_subahu.xml
+++ b/translations/kangyur/translations/096-054_toh805-the_tantra_the_questions_of_subahu.xml
@@ -27,7 +27,7 @@
             <editor role="finalReviewer" xml:id="UT22084-096-054-1092">Nathaniel Rich</editor>
          </titleStmt>
          <editionStmt>
-                <edition>v 1.1.12 <date>2023</date>
+                <edition>v 1.1.13 <date>2023</date>
                 </edition>
             </editionStmt>
          <publicationStmt>
@@ -232,6 +232,9 @@
                 </change>
                 <change who="#martina-cotter" when="2023-10-17T13:23:37.609Z" type="text-version" status="1.1.12" xml:id="UT22084-096-054-1144">
                     <desc>Updated typo.</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-10-23T23:13:25.084Z" type="text-version" status="1.1.13" xml:id="UT22084-096-054-1145">
+                    <desc>updated ellipsis.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -4397,7 +4400,7 @@
                   <l>Who are naturally free of attachment,</l>
                   <l>Yet show compassion to the kind,<tei:note place="end" xml:id="UT22084-096-054-658">
                         F uniquely reads <foreign xml:lang="Bo-Ltn">gdul bya’i don phyir khro la khro ba</foreign> (“For the sake
-                        of those to be tamed [they show] anger to the angry . . .”).</tei:note>
+                     of those to be tamed [they show] anger to the angry…”).</tei:note>
                   </l>
                   <l>Anger to the angry, and desire to the desirous. </l>
                </lg>
@@ -4495,7 +4498,7 @@
                   <l>“Avalokiteśvara has likewise taught mantras<tei:note place="end" xml:id="UT22084-096-054-673"> This translation follows D and most versions
                         in reading <foreign xml:lang="Bo-Ltn">spyan ras gzigs kyis gsang sngags bye ba phrag / gsum dang de
                            bzhin ’bum phrag lnga rnams bshad</foreign>. H, N, and S read <foreign xml:lang="Bo-Ltn">spyan ras
-                           gzigs kyi gsang sngags . . .</foreign>, resulting in the reading “the mantras
+                           gzigs kyi gsang sngags …</foreign>, resulting in the reading “the mantras
                         of Avalokiteśvara.” While this is a plausible reading, it is more likely
                         that Avalokiteśvara is the grammatical subject as he is the head of the
                         lotus clan, and thus would teach a different set of mantras than Vajrapāṇi,
@@ -4505,7 +4508,7 @@
                   <l>Including his lord of vidyās Hayagrīva,</l>
                   <l>And the maṇḍalas that bear his name.<tei:note place="end" xml:id="UT22084-096-054-674"> This translation follows the Degé reading
                            <foreign xml:lang="Bo-Ltn">de yi ming can dkyil ’khor dam pa gsungs</foreign>. H, N, and S read
-                     . . . <foreign xml:lang="Bo-Ltn">dam pa gsum</foreign>, “the three sublime maṇḍalas . . . .”</tei:note>
+                     … <foreign xml:lang="Bo-Ltn">dam pa gsum</foreign>, “the three sublime maṇḍalas….”</tei:note>
                   </l>
                </lg>
                <tei:milestone unit="chunk" xml:id="UT22084-096-054-675"/>
@@ -5268,7 +5271,7 @@
                         being referred to in the root text. There is also the possibility that
                            <title xml:lang="en">Notes on the Meaning</title> contains a scribal or editorial error,
                         mistaking the well-attested reading of the root text, <foreign xml:lang="Bo-Ltn">rdo rje lcags kyu
-                           ’am</foreign> (“Vajrāṅkuśa or . . .”), for <foreign xml:lang="Bo-Ltn">rdo rje lcags kyu ma</foreign>.
+                           ’am</foreign> (“Vajrāṅkuśa or…”), for <foreign xml:lang="Bo-Ltn">rdo rje lcags kyu ma</foreign>.
                      Thus the use of Vajrāṅkuśa here is conjectural. </tei:note>
                   </l>
                   <l>The vidyās of my lineage are also a remedy,</l>
