--- a/translations/kangyur/placeholders/062-005_toh205-the_sutra_on_the_woman_in_the_city_who_hangs_up_washing.xml
+++ b/translations/kangyur/placeholders/062-005_toh205-the_sutra_on_the_woman_in_the_city_who_hangs_up_washing.xml
@@ -5,9 +5,9 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Sūtra on the Woman in the City who Hangs Up Washing</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">nāgarāvalambikāsūtra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Nāgarāvalambikāsūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">grong khyer gyis 'tsho ba'i mdo/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryanāgarāvalambikā­nāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryanāgarāvalambikā­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa grong khyer gyis 'tsho ba zhes bya ba theg pa chen po'i mdo</title>
                 <author role="translatorMain" xml:id="UT22084-062-005-1">Sakya Pandita Translation Group</author>
                 <consultant role="dharmaMaster" xml:id="UT22084-062-005-2">Khenpo Kalsang Gyaltsen</consultant>
@@ -18,12 +18,12 @@
                 <editor role="projectEditor" xml:id="UT22084-062-005-20">David Fiordalis</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2023</date>
+                <edition>v 0.0.8 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-062-005"/>
                 <date/>
             </publicationStmt>
@@ -68,6 +68,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2023-09-25T13:18:14.289Z" type="text-version" status="0.0.7" xml:id="UT22084-062-005-23">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-25T14:45:12.621Z" type="translation-status" status="2.e" xml:id="UT22084-062-005-24">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-25T14:45:12.621Z" type="text-version" status="0.0.8" xml:id="UT22084-062-005-25">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
