--- a/translations/kangyur/placeholders/075-001_toh343-the_hundred_accounts_of_noble_deeds_beginning_with_that_of_purna.xml
+++ b/translations/kangyur/placeholders/075-001_toh343-the_hundred_accounts_of_noble_deeds_beginning_with_that_of_purna.xml
@@ -5,16 +5,17 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Hundred Accounts of Noble Deeds, Beginning with That of Pūrṇa</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">pūrṇapramukhāvadānaśataka</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Pūrṇapramukhāvadānaśataka</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">gang po la sogs pa'i rtogs pa brjod pa brgya pa/</title>
                 <title type="otherTitle" xml:lang="zh">《富樓那等一百譬喻經》</title>
-                <sponsor ref="sponsors.xml#sponsor-38">Sun Ping, Tian Xingwen and Sun Fanglin</sponsor>
+                <sponsor xml:id="UT22084-075-001-1">Sun Ping, Tian Xingwen and Sun Fanglin</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.3 <date>2020</date>
+                <edition>v 0.0.5 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-075-001"/>
     <date/>
             </publicationStmt>
@@ -29,12 +30,27 @@
                     <idno source-id="O1JC114941JC12028" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-26T07:16:50.571Z" user="admin">26/07/2022 07:16:50</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2020-08-19T10:43:32.463Z" user="admin">0.0.2</note>
-                <note type="updated" update="publication-date" value="" date-time="2020-08-19T10:43:32.463Z" user="admin"/>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2022-07-26T07:16:48.587Z" user="cabie-sim">Auto (update-titles)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2020-08-19T10:43:32.463Z" type="text-version" status="0.0.2" xml:id="UT22084-075-001-2">
+                    <desc>0.0.2</desc>
+                </change>
+                <change who="#admin" when="2020-08-19T10:43:32.463Z" type="publication-date" xml:id="UT22084-075-001-3">
+                    <desc/>
+                </change>
+                <change who="#cabie-sim" when="2022-07-26T07:16:48.587Z" type="text-version" status="0.0.3" xml:id="UT22084-075-001-4">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.4" xml:id="UT22084-075-001-5">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-26T10:29:53.165Z" type="translation-status" status="3" xml:id="UT22084-075-001-6">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-26T10:29:53.165Z" type="text-version" status="0.0.5" xml:id="UT22084-075-001-7">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
