--- a/translations/kangyur/placeholders/079-009_toh382-the_seminal_drop_of_union.xml
+++ b/translations/kangyur/placeholders/079-009_toh382-the_seminal_drop_of_union.xml
@@ -10,7 +10,12 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">rgyud kyi rgyal po chen po dpal yang dag par sbyor ba'i thig le zhes bya ba/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">Despite being a Kangyur text, this is a commentary, sometimes referred to as the “eleventh chapter” of the Sampuṭodbhava (Toh 381). It is included in some Sampuṭodbhava manuscripts in Sanskrit (Royal Asiatic Society and  Wellcome Institute Library) as their final part.</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt>
+                <availability status="4"/>
                 <idno xml:id="UT22084-079-009"/>
             </publicationStmt>
             <sourceDesc>
@@ -24,9 +29,19 @@
                     <idno source-id="O1JC114941JC12081" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2020-01-03T20:35:26.264Z" user="john">03/01/2020 20:35:26</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-079-009-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-27T07:43:38.892Z" type="translation-status" status="4" xml:id="UT22084-079-009-2">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-27T07:43:38.892Z" type="text-version" status="0.0.1" xml:id="UT22084-079-009-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
