--- a/translations/kangyur/placeholders/054-007_toh126-the_sutra_like_gold_dust.xml
+++ b/translations/kangyur/placeholders/054-007_toh126-the_sutra_like_gold_dust.xml
@@ -5,9 +5,9 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Sūtra Like Gold Dust</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">suvarṇavālukopamasūtra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Suvarṇavālukopamasūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">gser gyi bye ma lta bu'i mdo/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryasuvarṇavālukopama­nāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryasuvarṇavālukopama­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa gser gyi bye ma lta bu zhes bya ba theg pa chen po'i mdo</title>
                 <author role="translatorMain" xml:id="UT22084-054-007-1"/>
                 <consultant role="dharmaMaster" xml:id="UT22084-054-007-2">Khenpo Kalsang Gyaltsen</consultant>
@@ -19,12 +19,12 @@
                 <editor role="copyEditor" xml:id="UT22084-054-007-28">Konchog Norbu</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2023</date>
+                <edition>v 0.0.13 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-054-007"/>
                 <date/>
             </publicationStmt>
@@ -93,6 +93,12 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2023-08-29T15:12:16.784Z" type="text-version" status="0.0.12" xml:id="UT22084-054-007-33">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-27T09:13:29.325Z" type="translation-status" status="2.b" xml:id="UT22084-054-007-34">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-27T09:13:29.325Z" type="text-version" status="0.0.13" xml:id="UT22084-054-007-35">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
