--- a/translations/kangyur/translations/057-004_toh145,847-the_dharani_of_the_jewel_torch.xml
+++ b/translations/kangyur/translations/057-004_toh145,847-the_dharani_of_the_jewel_torch.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?xml-model href="../../../schema/current/translation.rng" schematypens="http://relaxng.org/ns/structure/1.0"?>
-<tei:TEI xmlns="http://www.tei-c.org/ns/1.0" xmlns:tei="http://www.tei-c.org/ns/1.0">
+<TEI xmlns="http://www.tei-c.org/ns/1.0">
     <teiHeader>
         <fileDesc>
             <titleStmt>
@@ -31,7 +31,7 @@
                 <sponsor xml:id="UT22084-057-004-13179">Make and Wang Xiao Juan (馬珂和王曉娟)</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.4.26 <date>2023</date>
+                <edition>v 1.4.27 <date>2023</date>
                 </edition>
             </editionStmt>
 
@@ -308,6 +308,9 @@
                 </change>
                 <change who="#martina-cotter" when="2023-10-23T21:00:48.938Z" type="text-version" status="1.4.26" xml:id="UT22084-057-004-13251">
                     <desc>updated ellipsis.</desc>
+                </change>
+                <change who="#celso" when="2023-10-27T15:42:25.58Z" type="text-version" status="1.4.27" xml:id="UT22084-057-004-13253">
+                    <desc>added a missing verse discovered in TM aligment; fixed typo</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -3412,7 +3415,7 @@
                         <l>“ ‘And showering down from the palms of their hands </l>
                         <l>Infinite necessities in the ten directions,</l>
                         <l>Which are worthy of being offered to the great seers,</l>
-                        <l>They worship the victors who beneath the tree of awakening.</l>
+                        <l>They worship the victors who dwell beneath the tree of awakening.</l>
                     </lg>
                     <milestone unit="chunk" xml:id="UT22084-057-004-561"/>
                     <lg tid="476">
@@ -3451,10 +3454,17 @@
                         <l>Those great beings worship the Victor.</l>
                     </lg>
                     <milestone unit="chunk" xml:id="UT22084-057-004-566"/>
-                    <lg tid="481">
+                    <lg tid="808">
                         <l>“ ‘Emanating multitudes of incense,</l>
                         <l>Incense canopies, and light rays in the shape of incense,</l>
                         <l>And having strewn about various kinds of incense,</l>
+                        <l>Those great beings worship the Victor.</l>
+                    </lg>
+                    <milestone unit="chunk" xml:id="UT22084-057-004-13252"/>
+                    <lg tid="809">
+                        <l>“ ‘Emanating multitudes of fragrances,</l>
+                        <l>Canopies of fragrant substances, and light rays in the shape of fragrant substances,</l>
+                        <l>And having strewn about various kinds of fragrances,</l>
                         <l>Those great beings worship the Victor.</l>
                     </lg>
                     <milestone unit="chunk" xml:id="UT22084-057-004-567"/>
@@ -8832,4 +8842,4 @@
 
 
 
-</tei:TEI>
+</TEI>
