--- a/translations/kangyur/placeholders/077-009_toh368-the_smaller_samvara.xml
+++ b/translations/kangyur/placeholders/077-009_toh368-the_smaller_samvara.xml
@@ -5,18 +5,19 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">bde mchog nyung ngu/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">laghuśaṃvara</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Laghuśaṃvara</title>
                 <title type="mainTitle" xml:lang="en">The Smaller Śaṃvara</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">rgyud kyi rgyal po dpal bde mchog nyung ngu zhes bya ba/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">tantrarājaśrīlaghuśaṃvaranāma</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">cakrasaṃvaralaghutantra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Tantrarājaśrīlaghuśaṃvaranāma</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Cakrasaṃvaralaghutantra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">śrīherukābhidāna</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="4">
+            <publicationStmt>
+                <availability status=""/>
                 <idno xml:id="UT22084-077-009"/>
                 <date/>
             </publicationStmt>
@@ -31,9 +32,24 @@
                     <idno source-id="O1JC114941JC12063" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-05-05T09:24:34.939Z" user="admin">05/05/2022 09:24:34</note>    <note type="updated" update="translation-status" value="4" date-time="2022-05-05T09:24:28.863Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-05-05T09:24:28.863Z" user="line-tofte">0.0.1</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2022-05-05T09:24:28.863Z" type="translation-status" status="4" xml:id="UT22084-077-009-1">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2022-05-05T09:24:28.863Z" type="text-version" status="0.0.1" xml:id="UT22084-077-009-2">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.2" xml:id="UT22084-077-009-3">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-30T13:27:26.152Z" type="translation-status" status="" xml:id="UT22084-077-009-4">
+                    <desc/>
+                </change>
+                <change who="#line-tofte" when="2023-10-30T13:27:26.152Z" type="text-version" status="0.0.3" xml:id="UT22084-077-009-5">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
