--- a/translations/kangyur/translations/064-002_toh232-the_great_cloud_1.xml
+++ b/translations/kangyur/translations/064-002_toh232-the_great_cloud_1.xml
@@ -25,7 +25,7 @@
         <sponsor xml:id="UT22084-064-002-1690">anonymous</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.1.16 <date>2023</date>
+                <edition>v 1.1.17 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -219,6 +219,9 @@
                 <change who="#martina-cotter" when="2023-10-23T21:10:07.584Z" type="text-version" status="1.1.16" xml:id="UT22084-064-002-1738">
                     <desc>updated ellipsis.</desc>
                 </change>
+                <change who="#martina-cotter" when="2023-10-30T13:55:03.391Z" type="text-version" status="1.1.17" xml:id="UT22084-064-002-1741">
+                    <desc>update to intro, added footnote and bib entry.</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
   </teiHeader>
@@ -384,7 +387,7 @@
             of a later version of the Chinese translation.<note place="end" xml:id="UT22084-064-002-1670">See Radich 2017.</note> The Chinese and
             Tibetan versions follow the same overall structure and generally contain the same content, but there are several discrepancies, and the
             Tibetan version is much more detailed in certain sections, particularly in the opening description of the audience that was present when
-            the discourse was spoken. There is to our knowledge no extant Sanskrit version of this sūtra. The English translation presented here was
+            the discourse was spoken. The fact that there is an extant Sanskrit manuscript of this sūtra, which preserves about 80% of the text, only came to our attention after completing the translation.<note place="end" xml:id="UT22084-064-002-1739">For a brief description of this manuscript, see Ye 2023.</note> At present, this manuscript remains inaccessible to us. The English translation presented here was
             based primarily on the Tibetan Degé edition, in consultation with the Comparative Edition (<foreign xml:lang="Bo-Ltn" type="term">dpe
               bsdur ma</foreign>) and the Stok Palace manuscript edition. Dharmakṣema’s Chinese translation was also consulted throughout.</p>
         </div>
@@ -5801,7 +5804,8 @@
             Part of the Present <title xml:lang="Sa-Ltn">Suvarṇa­prabhāsa</title>.” <title xml:lang="en">Journal of Indian and Buddhist
               Studies</title> 45, no. 1 (1996): 28–30.</bibl>
           <bibl xml:id="UT22084-064-002-940">Thurman, Robert A. F., trans. <title xml:lang="en">The Teaching of Vimalakīrti</title> (<title xml:lang="Sa-Ltn">Vimalakīrti­nirdeśa</title>, Toh 176). 84000: Translating the Words of the Buddha, 2017.</bibl>
-          <bibl xml:id="UT22084-064-002-941">Yoshimura Shuki. <title xml:lang="en">The Denkar-ma: An Oldest Catalogue of the Tibetan Buddhist
+            <bibl xml:id="UT22084-064-002-1740">Ye Shaoyong. “The Prophecy about Nāgārjuna in the Mahāmeghasūtra: A Perspective Based on the Sanskrit Manuscript Preserved in the Potala Palace.” <title xml:lang="en">Journal of Indian and Buddhist Studies</title> 71, no. 3 (2023): 62-67.</bibl>
+            <bibl xml:id="UT22084-064-002-941">Yoshimura Shuki. <title xml:lang="en">The Denkar-ma: An Oldest Catalogue of the Tibetan Buddhist
               Canons</title>. Kyoto: Ryukoku University, 1950.</bibl>
         </div>
       </div>
@@ -6759,7 +6763,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">caturaṅgabala</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">dpung gi tshogs yan lag bzhi pa</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">དཔུང་གི་ཚོགས་ཡན་ལག་བཞི་པ།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The ancient Indian army was composed of four branches—infantry, cavalry, chariots, and elephants.</p>
                             </note>
                         </gloss>
